<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_fav"
        android:title="Fav"
        android:icon="@drawable/icon_empty_star_white_24dp"
        app:showAsAction="always"/>
</menu>