<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/icon_search_white_24dp"
        android:title="@string/search_hint"
        app:showAsAction="ifRoom|collapseActionView" />
</menu>