<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.andriginting.footballmatch.view.main.MainActivity">
    <item
        android:id="@+id/tab_match"
        android:icon="@drawable/score_board"
        android:title="@string/tab_match" />
    <item
        android:id="@+id/tab_team"
        android:icon="@drawable/calendar"
        android:title="@string/tab_teams" />
    <item android:id="@+id/tab_fav_match"
        android:icon="@drawable/fav_icon"
        android:title="@string/favorite_match"/>

</menu>
